Hemos agregado la pagina a cada paquete y animaciones a los enlaces, ademas agregamos un boton para regresar al index

--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<!-- Falta agregar las descripciones en los paquetes, y arreglar la version para ordenador, y agregar mas paquetes -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -20,7 +18,7 @@
 
     <hr>
 
-	<video controls autoplay>
+	<video controls autoplay="">
   		<source src="presentacion.mp4" type="video/mp4">
   		Tu navegador no soporta videos de html5.
 	</video>
@@ -30,50 +28,69 @@
     <h2>Paquetes</h2>
 
     <div class="contenedor">
-        <article onclick="alert('Paquete seleccionado')">
-            <img src="img/africa.jpg" alt="imagen de paquete 1">
-            <h3>Africa</h3>
-        </article>
+        <a href="pag/africa.html">
+            <article onclick="alert('Paquete seleccionado')">
+                    <img src="img/africa.jpg" alt="imagen de paquete 1">
+                    <h3>Africa</h3>
+            </article>
+        </a>
 
-        <article onclick="alert('Paquete seleccionado')">
-            <img src="img/asia.jpg" alt="imagen de paquete 2">
-            <h3>Asia</h3>
-        </article>
+        <a href="pag/asia.html">
+            <article onclick="alert('Paquete seleccionado')">
+                <img src="img/asia.jpg" alt="imagen de paquete 2">
+                <h3>Asia</h3>
+            </article>
+        </a>
 
-        <article onclick="alert('Paquete seleccionado')">
-            <img src="img/caribe.jpg" alt="imagen de paquete 3">
-            <h3>Caribe</h3>
-        </article>
+        <a href="pag/caribe.html">
+            <article onclick="alert('Paquete seleccionado')">
+                <img src="img/caribe.jpg" alt="imagen de paquete 3">
+                <h3>Caribe</h3>
+            </article>
+        </a>
 
-        <article onclick="alert('Paquete seleccionado')">
-            <img src="img/crucero.jpg" alt="imagen de paquete 4">
-            <h3>Crucero</h3>
-        </article>
+        <a href="pag/crucero.html">
+            <article onclick="alert('Paquete seleccionado')">
+                <img src="img/crucero.jpg" alt="imagen de paquete 4">
+                <h3>Crucero</h3>
+            </article>
+        </a>
 
-        <article onclick="alert('Paquete seleccionado')">
-            <img src="img/europa.jpg" alt="imagen de paquete 4">
-            <h3>Europa</h3>
-        </article>
+        <a href="pag/europa.html">
+            <article onclick="alert('Paquete seleccionado')">
+                <img src="img/europa.jpg" alt="imagen de paquete 4">
+                <h3>Europa</h3>
+            </article>
+        </a>
 
-        <article onclick="alert('Paquete seleccionado')">
-            <img src="img/medio_oriente.jpg" alt="imagen de paquete 4">
-            <h3>Medio Oriente</h3>
-        </article>
+        <a href="pag/medio_oriente.html">
+            <article onclick="alert('Paquete seleccionado')">
+                <img src="img/medio_oriente.jpg" alt="imagen de paquete 4">
+                <h3>Medio Oriente</h3>
+            </article>
+        </a>
 
-        <article onclick="alert('Paquete seleccionado')">
-            <img src="img/mexico.jpg" alt="imagen de paquete 4">
-            <h3>Mexico</h3>
-        </article>
+        <a href="pag/mexico.html">
+            <article onclick="alert('Paquete seleccionado')">
+                <img src="img/mexico.jpg" alt="imagen de paquete 4">
+                <h3>Mexico</h3>
+            </article>
+        </a>
 
-        <article onclick="alert('Paquete seleccionado')">
-            <img src="img/pacifico.jpg" alt="imagen de paquete 4">
-            <h3>Pacifico</h3>
-        </article>
+        <a href="pag/pacifico.html">
+            <article onclick="alert('Paquete seleccionado')">
+                <img src="img/pacifico.jpg" alt="imagen de paquete 4">
+                <h3>Pacifico</h3>
+            </article>
+        </a>
 
-        <article onclick="alert('Paquete seleccionado')">
-            <img src="img/sudamerica.jpg" alt="imagen de paquete 4">
-            <h3>Sudamerica</h3>
-        </article>
+        <a href="pag/sudamerica.html">
+            <article onclick="alert('Paquete seleccionado')">
+                <img src="img/sudamerica.jpg" alt="imagen de paquete 4">
+                <h3>Sudamerica</h3>
+            </article>
+        </a>
+
     </div>
 
     <br><br>
