Hemos corregido el error de la reproduccion del video en la visualizacion de github, agregandolo directo de youtube

--- a/index.html
+++ b/index.html
@@ -17,12 +17,9 @@
     </header>
 
     <hr>
-
-	<video controls autoplay="">
-  		<source src="presentacion.mp4" type="video/mp4">
-  		Tu navegador no soporta videos de html5.
-	</video>
-
+        <div class="contenedor_video">
+            <iframe src="https://www.youtube.com/embed/b7aJTXfofLw?rel=0&amp;autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
 	<hr>
 
     <h2>Paquetes</h2>
